major stable update

--- a/expense-tracker-server/src/main/resources/application.properties
+++ b/expense-tracker-server/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 
 # Logging
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type=TRACE
 
 serverBaseUrl=/api/expense-tracker/v1
